[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/ResUpButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/ResDownButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/Objects/Resistor/res_body.png" type="Texture" id=3]
[ext_resource path="res://Resources/Objects/Resistor/resistor_color_indicator.png" type="Texture" id=4]
[ext_resource path="res://Objects/Resistor.gd" type="Script" id=5]

[node name="Resistor" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="IndicatorOne" type="Sprite" parent="."]
position = Vector2( -38.5, 3.875 )
scale = Vector2( 1.1875, 1.00904 )
texture = ExtResource( 4 )

[node name="IndicatorTwo" type="Sprite" parent="."]
position = Vector2( -8, 3.9375 )
scale = Vector2( 1.1875, 1.01054 )
texture = ExtResource( 4 )

[node name="IndicatorThree" type="Sprite" parent="."]
position = Vector2( 26, 3.9375 )
scale = Vector2( 1.1875, 1.01054 )
texture = ExtResource( 4 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="UpOne" parent="." instance=ExtResource( 1 )]
margin_left = -55.0
margin_top = -78.0
margin_right = -23.0
margin_bottom = -38.0

[node name="UpTwo" parent="." instance=ExtResource( 1 )]
margin_left = -24.0
margin_top = -78.0
margin_right = 8.0
margin_bottom = -38.0

[node name="UpThree" parent="." instance=ExtResource( 1 )]
margin_left = 8.0
margin_top = -78.0
margin_right = 40.0
margin_bottom = -38.0

[node name="DownOne" parent="." instance=ExtResource( 2 )]
margin_left = -55.0
margin_top = 45.0
margin_right = -23.0
margin_bottom = 85.0

[node name="DownTwo" parent="." instance=ExtResource( 2 )]
margin_left = -24.0
margin_top = 45.0
margin_right = 8.0
margin_bottom = 85.0

[node name="DownThree" parent="." instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = 45.0
margin_right = 40.0
margin_bottom = 85.0

[node name="ValueIndicator" type="Label" parent="."]
margin_left = -30.0
margin_top = -100.0
margin_right = 16.0
margin_bottom = -86.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="UpOne" to="." method="_on_UpOne_pressed"]
[connection signal="pressed" from="UpTwo" to="." method="_on_UpTwo_pressed"]
[connection signal="pressed" from="UpThree" to="." method="_on_UpThree_pressed"]
[connection signal="pressed" from="DownOne" to="." method="_on_DownOne_pressed"]
[connection signal="pressed" from="DownTwo" to="." method="_on_DownTwo_pressed"]
[connection signal="pressed" from="DownThree" to="." method="_on_DownThree_pressed"]
